--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -12,12 +12,18 @@
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
                 <h2>Wiki</h2>
-                <form>
-                    <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
+
+                <form action="{% url 'wiki:search' 'css'%}" method = "GET">
+                    {% csrf_token %}
+                    {{ form }}
+                    <!--<input id="search-id" type="text" name="search-field" value = "" placeholder="search">-->
+                    <input type="submit" value="OK">
                 </form>
+
                 <div>
-                    <a href="{% url 'index' %}">Home</a>
+                    <a href="{% url 'wiki:index' %}">Home</a>
                 </div>
+
                 <div>
                     Create New Page
                 </div>
