--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -12,7 +12,7 @@
     <ul>
         {% for entry in entries %}
             <li>
-                <a href = {{ entry }} > {{ entry }}</a>
+                <a href = "{% url 'wiki:entry' entry %}" > {{ entry }}</a>
             </li>
             
         {% endfor %}
