refactored search for correct term to just redirect to that pages url

--- a/encyclopedia/templates/encyclopedia/search.html
+++ b/encyclopedia/templates/encyclopedia/search.html
@@ -1,8 +1,7 @@
 {% extends "encyclopedia/layout.html" %}
 
 {% block title %}
-    Search Results
-    <!-- Or even say "no exact match for..."-->
+    Search for "{{ term }}"
 {% endblock %}
 
 {% block body %}
