--- a/encyclopedia/templates/encyclopedia/search.html
+++ b/encyclopedia/templates/encyclopedia/search.html
@@ -11,7 +11,7 @@
     <ul>
         {% for result in results %}
             <li>
-                <p> {{ result }} </p>
+                <a href = "{% url 'wiki:entry' result %}"> {{ result }} </a>
             </li>
             
         {% endfor %}
