added a non-functional create new page path and html file

--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div>
-                    Create New Page
+                    <a href="{% url 'wiki:new' %}"> Create New Page </a>
                 </div>
                 <div>
                     Random Page
