--- a/encyclopedia/templates/encyclopedia/newPage.html
+++ b/encyclopedia/templates/encyclopedia/newPage.html
@@ -7,6 +7,9 @@
 
 {% block body %}
     <h1>Create a New Page</h1>
+    <form action="{% url 'wiki:create' %}" method="post">
+        {{ form }}
+    </form>
     
 
 {% endblock %}
