added save button

--- a/encyclopedia/templates/encyclopedia/newPage.html
+++ b/encyclopedia/templates/encyclopedia/newPage.html
@@ -9,6 +9,7 @@
     <h1>Create a New Page</h1>
     <form action="{% url 'wiki:create' %}" method="post">
         {{ form }}
+        <input type="submit" value = "Create Entry"></input>
     </form>
     
 
