--- a/encyclopedia/templates/encyclopedia/newPage.html
+++ b/encyclopedia/templates/encyclopedia/newPage.html
@@ -8,6 +8,7 @@
 {% block body %}
     <h1>Create a New Page</h1>
     <form action="{% url 'wiki:create' %}" method="post">
+        {% csrf_token %}
         {{ form }}
         <input type="submit" value = "Create Entry"></input>
     </form>
