--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -6,6 +6,10 @@
 
 {% block body %}
 
+    <button id = "editButton">
+        <a>Edit this page</a>
+    </button>
+
     {{ content|safe }}
 
 {% endblock %}
