added a route for editing a page

--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -7,8 +7,9 @@
 {% block body %}
 
     <button id = "editButton">
-        <a>Edit this page</a>
+        <a href = "{% url 'wiki:edit' title %}" > Edit this page </a>
     </button>
+
 
     {{ content|safe }}
 
