--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -6,6 +6,15 @@
 
 {% block body %}
 
-    Edit this page!
+    <h1>Edit this page</h1>
+        <form action="{% url 'wiki:create' %}" method="post">
+        <input type="submit" value = "Save Changes"></input>
+    {{form}}
+    </form>
+{% comment %}     <form action="{% url 'wiki:create' %}" method="post">
+        {% csrf_token %}
+        {{ form }}
+        <input type="submit" value = "Create Entry"></input>
+    </form> {% endcomment %}
 
 {% endblock %}
