--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -7,14 +7,9 @@
 {% block body %}
 
     <h1>Edit this page</h1>
-    <form action="{% url 'wiki:create' %}" method="post">
-        <textarea name="content"> {{content}} </textarea
-        <input type="submit" value = "Save Changes"></input>
-    </form>
-{% comment %}     <form action="{% url 'wiki:create' %}" method="post">
+    <form action="{% url 'wiki:change' %}" method="post">
         {% csrf_token %}
-        {{ form }}
+        <textarea type = "text" name="content" id = "edit-text-area"> {{content}} </textarea>
         <input type="submit" value = "Create Entry"></input>
-    </form> {% endcomment %}
-
+    </form>
 {% endblock %}
