created random function in views

--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -28,7 +28,7 @@
                     <a href="{% url 'wiki:new' %}"> Create New Page </a>
                 </div>
                 <div>
-                    Random Page
+                    <a href="{% url 'wiki:random' %}"> Go 2 Rando Page </a>
                 </div>
                 {% block nav %}
                 {% endblock %}
