--- a/encyclopedia/templates/encyclopedia/entry.html
+++ b/encyclopedia/templates/encyclopedia/entry.html
@@ -7,7 +7,7 @@
 {% block body %}
 
     <button id = "editButton">
-        <a href = "{% url 'wiki:edit' title %}" > Edit this page </a>
+        <a href = "{% url 'wiki:edit' title %}" > Edit page </a>
     </button>
 
 
