--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -11,13 +11,13 @@
     <body>
         <div class="row">
             <div class="sidebar col-lg-2 col-md-3">
-                <h2>Wiki</h2>
+                <h2 id = "wiki-title">Wiki</h2>
 
                 <form action="{% url 'wiki:search' %}" method = "GET">
                     <!--{% csrf_token %}-->
                     <!-- {{ form }}-->
-                    <input id="search-id" type="text" name="q" placeholder="search" minlength="1">
-                    <input type="submit" value="OK">
+                    <input id="search-id" type="text" name="q" placeholder="search">
+                    <!--<input type="submit" value="OK">-->
                 </form>
 
                 <div>
