--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -10,6 +10,8 @@
     </head>
     <body>
         <div class="row">
+            <div class="sidebarInvisible col-lg-2 col-md-3">
+            </div>
             <div class="sidebar col-lg-2 col-md-3">
                 <h2 id = "wiki-title">Wiki</h2>
 
