--- a/encyclopedia/templates/encyclopedia/edit.html
+++ b/encyclopedia/templates/encyclopedia/edit.html
@@ -10,7 +10,7 @@
     <form action="{% url 'wiki:change' %}" method="post">
         {% csrf_token %}
         <input id="edit-entry-title-invisible" type="text" name="title" placeholder="search" value = {{ title }}></input>
-        <textarea type = "text" name="content" id = "edit-text-area"> {{content}} </textarea>
-        <input type="submit" value = "Save Changes"></input>
+        <textarea type = "text" name="content" id = "edit-text-area">{{content}}</textarea>
+        <input class = "save-changes" type="submit" value = "Save Changes"></input>
     </form>
 {% endblock %}
