--- a/encyclopedia/templates/encyclopedia/newPage.html
+++ b/encyclopedia/templates/encyclopedia/newPage.html
@@ -10,7 +10,7 @@
     <form action="{% url 'wiki:create' %}" method="post">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value = "Create Entry"></input>
+        <input id = "new-entry-submit" type="submit" value = "Create Entry"></input>
     </form>
     
 
