--- a/encyclopedia/static/encyclopedia/styles.css
+++ b/encyclopedia/static/encyclopedia/styles.css
@@ -1,15 +1,24 @@
+* element {
+    border:none;
+    background-image:none;
+    background-color:transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+
 html, body {
     max-width: 100%;
     overflow-x: hidden;
 }
 
 html {
-    background: rgb(150, 150, 150);
+    background: rgb(160, 140, 140);
 }
 
 body {
     margin: 0;
-    background-color: white;
+    background-color: rgb(255, 245, 245);
     color: rgb(109, 109, 109);
 }
 
@@ -49,7 +58,19 @@ textarea {
 }
 
 #search-id {
+    border:none;
+    background-image:none;
+    background-color:transparent;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+}
+
+#search-id {
     width: 90%;
+    padding-left: 5px;
+    background: rgb(58, 58, 58);
+    color: white;
 }
 
 .sidebar-link {
@@ -94,11 +115,15 @@ a:hover {
 }
 
 #wiki-title{
-    color: rgb(136, 136, 136);
+    color: rgb(90, 90, 90);
 }
 
 .sidebar h2 {
     margin-top: 5px;
+}
+
+h2#wiki-title {
+    margin-bottom: 0px;
 }
 
 #editButton {
