--- a/encyclopedia/templates/encyclopedia/index.html
+++ b/encyclopedia/templates/encyclopedia/index.html
@@ -6,7 +6,9 @@
 
 
 {% block body %}
-    <h1>All Pages</h1>
+    <h1> Welcome to Code Wiki!</h1>
+    <p id = "bio"> This site is catalogue of my personal notes on various programming languages and tech. These pages are far from exhaustive, but maybe you'll find some of them helpful. </p>
+    <h2> All Pages</h2>
     
 
     <ul>
