--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -17,7 +17,7 @@
                 
                 <div class = "sidebar-link">
                     <a href="{% url 'wiki:index' %}" class = "sidebar-link-element">
-                        <h2 id = "wiki-title">Wiki</h2>
+                        <h2 id = "wiki-title"> Code Wiki </h2>
                     </a>
                 </div>
 
